trunk/Archive2/a6/f32105475c7bef/output
main.cpp:5:16: error: 'AnotherClass GA::evaluate(double, double)' cannot be overloaded
   AnotherClass evaluate(double, double);
                ^
main.cpp:4:8: error: with 'void GA::evaluate(double, double)'
   void evaluate(double, double);
        ^
