trunk/Archive2/a6/f32105475c7bef/main.cpp
struct AnotherClass{};

class GA {
  void evaluate(double, double);
  AnotherClass evaluate(double, double);
};

